[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/script_interagiveis_de_fase/chao_final_boss_2.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 542.867, 26.1745 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 29.9884, 86.2155 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 36.0178, 80.1861 )

[node name="chao_final_boss_2" type="StaticBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 542.731, -2.86244 )
shape = SubResource( 1 )

[node name="area_criar" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_criar"]
position = Vector2( 200.476, -113.051 )
shape = SubResource( 2 )

[node name="area_destruir" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_destruir"]
position = Vector2( 1217.93, -114.558 )
shape = SubResource( 3 )

[node name="position_inicio_chao" type="Position2D" parent="."]
[connection signal="body_entered" from="area_criar" to="." method="_on_area_criar_body_entered"]
[connection signal="body_exited" from="area_destruir" to="." method="_on_area_destruir_body_exited"]
